--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -1,13 +1,11 @@
 body {
     font-family: monospace;
-    background-image: url(image/kenrick-mills-Wr7_0D6THK0-unsplash.jpg);
+    background-image: url(image/eberhard-grossgasteiger-J9NDmBVhN04-unsplash.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     margin: 0;
     overflow-x: hidden;
-
-
 }
 
 p,
@@ -30,8 +28,29 @@ ul {
 }
 
 #parcours {
-    padding-left: 700px;
+    margin-left: 500px;
+    font-size: 20px;
 }
+
+#exp {
+    font-size: 20px;
+    margin-left: 11px;
+}
+
+#competences {
+    font-size: 20px;
+    margin-left: 2290px;
+}
+
+#prjs {
+    margin-left: 300px;
+    font-size: 20px;
+}
+
+#welcome {
+    font-size: 20px;
+}
+
 
 .about_me {
     margin-right: 15px;
@@ -263,11 +282,11 @@ nav>.crdn {
 }
 
 #cloud_3 {
-    position: relative;
+    position: absolute;
     width: 1100px;
     height: 500px;
     z-index: 1;
-    top: 1226px;
+    /* top: 1226px; */
     left: 759px;
 }
 
@@ -284,10 +303,6 @@ nav>.crdn {
     font-size: 15px;
 }
 
-#welcome,
-#parcours {
-    font-size: 20px;
-}
 
 .scroll_1 {
     position: absolute;
@@ -314,10 +329,19 @@ nav>.crdn {
     position: fixed;
 }
 
-#carouselExampleIndicators,
-.carousel-indicators {
+.banner{
+    position: absolute;
+    width: 955px;
+    height: 299px;
+    margin-left: 320px;
+    margin-top: 70px;
+}
+
+
+
+#carouselExampleIndicators {
     position: relative;
-    top: 362px;
+    /* top: 362px;*/
 }
 
 /* ---- particles.js container ---- */
