--- a/style.css
+++ b/style.css
@@ -340,16 +340,14 @@ nav>#git {
 #cloud_1_2 {
     position: absolute;
     width: 400px;
-    height: 350px;
-    /* margin-top: -150px; */
     animation: cloud-move_2 40s infinite linear;
 }
 
 #cloud_1_3 {
     position: absolute;
     width: 680px;
-    height: 350px;
     margin-top: 100px;
+    top: 185px;
     animation: cloud-move_3 35s infinite linear;
 }
 
@@ -417,10 +415,6 @@ nav>#git {
     height: 550px;
 }
 
-.line-cloud_3 {
-    height: 1000px;
-}
-
 .line-cloud_7 {
     top: 514px;
     height: 550px;
@@ -438,7 +432,7 @@ nav>#git {
 
 .line-cloud_1_3 {
     top: 1600px;
-    height: 350px;
+    height: 785px;
 }
 
 #presentation {
@@ -1582,10 +1576,13 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
     .navigation {
         z-index: 1;
         position: fixed;
-        left: 326px;
-        font-size: 12px;
-        top: 83px;
-        display: flex;
+        left: 312px;
+        /* margin-left: -1px; */
+        word-spacing: 3px;
+        font-size: 13px;
+        width: 193px;
+        top: 96px;
+        display: block;
         transform: rotate(-90deg);
     }
 
@@ -1774,7 +1771,7 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         position: absolute;
         text-align: center;
         margin-top: 155px;
-        margin-left: 113px;
+        margin-left: 90px;
         width: 234px;
         padding-bottom: 1px;
         left: 45px;
@@ -1802,7 +1799,7 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         display: flex;
         position: relative;
         top: 235px;
-        left: 30px;
+        left: 15px;
         right: 0;
     }
 
@@ -1861,7 +1858,7 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         text-align: right;
         position: relative;
         margin-bottom: 80px;
-        margin-left: -390px;
+        margin-left: -407px;
     }
 
     #formation_1 {
@@ -1876,7 +1873,8 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         position: absolute;
         width: 680px;
         height: 350px;
-        margin-top: 320px;
+        margin-top: 2300px;
+        z-index: 0;
         animation: cloud-move_3 35s infinite linear;
     }
 
@@ -1992,6 +1990,40 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
     #parcours {
         margin-left: 1096px;
     }
+    .menu_1_2 {
+        margin: 0 auto;
+        position: absolute;
+        top: 133px;
+        left: 200px;
+        margin-left: -25px;
+        margin-top: -25px;
+        z-index: 1;
+    }
+    .menu {
+        position: absolute;
+        margin-bottom: 55px;
+        top: 357px;
+        left: 200px;
+        margin-left: -25px;
+        margin-top: -25px;
+        z-index: 1;
+    }
+    .info_2 {
+        display: flex;
+        padding: 10px;
+        text-align: right;
+        position: relative;
+        margin-bottom: 80px;
+        margin-left: -380px;
+    }
+
+    #cloud_2 {
+        position: absolute;
+        width: 747px;
+        height: 386px;
+        margin-top: 405px;
+        margin-left: -510px;
+    }
     .scroll_1 {
         position: absolute;
         width: 35px;
@@ -2044,12 +2076,13 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         position: absolute;
         text-align: center;
         margin-top: 155px;
-        margin-left: 50px;
+        margin-left: 64px;
         width: 234px;
         padding-bottom: 1px;
         left: 45px;
         background-color: #ffffff2e;
     }
+
     #experience_2 {
         visibility: visible;
         text-align: center;
@@ -2086,7 +2119,147 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         padding-top: 50px;
         display: block;
     }
-
-
 }
+
+/* responsive ecran 320pxpx */
+
+@media screen and (max-width: 320px) {
+    .h1,
+    h1 {
+        font-size: 1.5rem;
+    }
+
+    #presentation {
+        font-size: 11px;
+        margin-bottom: 2px;
+    }
+
+    .certification>p,
+    .txt_scroll_1 {
+        font-size: 10px;
+    }
+
+    .missions_1>p,
+    .missions_2>p,
+    .missions_3>p,
+    .missions>li,
+    .missions>p {
+        font-size: 11px;
+    }
+    .menu {
+        position: absolute;
+        margin-bottom: 55px;
+        top: 357px;
+        left: 169px;
+        margin-left: -25px;
+        margin-top: -25px;
+        z-index: 1;
+    }
+    .menu_1_2 {
+        margin: 0 auto;
+        position: absolute;
+        top: 133px;
+        left: 169px;
+        margin-left: -25px;
+        margin-top: -25px;
+        z-index: 1;
+    }
+    .coordonnees {
+        padding-top: 16px;
+        font-size: 17px;
+        margin-left: 41px;
+        word-spacing: -73px;
+    }
+    #competences {
+        margin-left: 1301px;
+    }
+    #parcours {
+        margin-left: 904px;
+    }
+    .vl {
+        border-left: 2px solid black;
+        margin-left: 35px;
+        height: 100%;
+        position: fixed;
+    }
+    #experience_5 {
+        display: flex;
+        position: relative;
+        top: 235px;
+        left: -75px;
+        right: 0;
+    }
+    #experience_4 {
+        visibility: visible;
+        background-color: #ffffff2e;
+        margin-left: 28px;
+        margin-top: -122px;
+        position: absolute;
+        width: 252px;
+        height: 238px;
+        z-index: 1;
+    }
+    #experience_3 {
+        visibility: visible;
+        z-index: 1;
+        position: absolute;
+        text-align: center;
+        margin-top: 155px;
+        margin-left: 64px;
+        width: 234px;
+        padding-bottom: 1px;
+        left: -12px;
+        background-color: #ffffff2e;
+    }
+    .formation_2 {
+        position: relative;
+        right: 105px;
+        top: 202px;
+        width: 300px;
+        margin-bottom: -25px;
+    }
+    #formation_1 {
+        display: flex;
+        width: 293px;
+        margin-left: 27px;
+        padding-top: 110px;
+        margin-bottom: -16px;
+    }
+    .scroll_1 {
+        position: absolute;
+        width: 35px;
+        height: 35px;
+        right: 117px;
+        margin-left: 0;
+        margin-top: 5px;
+        transform: rotate(180deg);
+    }
+    .txt_scroll_1 {
+        position: absolute;
+        width: 115px;
+        height: 53px;
+        margin-top: 0px;
+        margin-left: 186px;
+    }
+    .certification {
+        margin-left: 73px;
+        font-family: 'Nanum Gothic Coding', monospace;
+    }
+    .about_me {
+        margin-right: 0px;
+        text-align: right;
+        width: 208px;
+    }
+    #home {
+        margin-left: 45px;
+        margin-bottom: 30px;
+        padding-top: 50px;
+        display: block;
+    }
+    #home>img {
+        width: 210px;
+        height: 312px;
+    }
+}
+
 
